# rose

./: .gitignore
compile/: boost_1_46_0  config.status  detail.html  rosePublicConfig.h  summary.html
compile.new/: Makefile  config.status  rose.docs
compile.new/binaries/: Makefile
compile.new/binaries/samples/: Makefile
compile.new/config/: Makefile
compile.new/demo/: Makefile
compile.new/demo/qrose/: Makefile
compile.new/docs/: Makefile
compile.new/docs/Rose/: Makefile  footer.html  leftmenu.html  sage.cfg
compile.new/docs/testDoxygen/: Makefile  test.cfg
compile.new/exampleTranslators/: Makefile
compile.new/exampleTranslators/AstCopyReplTester/: Makefile
compile.new/exampleTranslators/DOTGenerator/: Makefile
compile.new/exampleTranslators/PDFGenerator/: Makefile
compile.new/exampleTranslators/defaultTranslator/: Makefile
compile.new/exampleTranslators/documentedExamples/: Makefile
compile.new/projects/: Makefile
compile.new/projects/AstEquivalence/: Makefile
compile.new/projects/BabelPreprocessor/: Makefile
compile.new/projects/BinFuncDetect/: Makefile
compile.new/projects/BinQ/: Makefile
compile.new/projects/BinaryCloneDetection/: Makefile
compile.new/projects/C_to_Promela/: Makefile
compile.new/projects/CertSecureCodeProject/: Makefile
compile.new/projects/CloneDetection/: Makefile
compile.new/projects/DataFaultTolerance/: Makefile
compile.new/projects/DatalogAnalysis/: Makefile
compile.new/projects/DistributedMemoryAnalysisCompass/: Makefile
compile.new/projects/DocumentationGenerator/: Makefile
compile.new/projects/FiniteStateModelChecker/: Makefile
compile.new/projects/HeaderFilesInclusion/: Makefile
compile.new/projects/MPI_Tools/: Makefile
compile.new/projects/MacroRewrapper/: Makefile
compile.new/projects/ManyCoreRuntime/: Makefile
compile.new/projects/OpenMP_Analysis/: Makefile
compile.new/projects/OpenMP_Checker/: Makefile
compile.new/projects/OpenMP_Translator/: Makefile
compile.new/projects/PolyhedralModel/: Makefile
compile.new/projects/PowerAwareCompiler/: Makefile
compile.new/projects/QtDesignerPlugins/: Makefile
compile.new/projects/RTC/: Makefile
compile.new/projects/RTED/: Makefile
compile.new/projects/RosePolly/: Makefile
compile.new/projects/RoseQt/: Makefile
compile.new/projects/SatSolver/: Makefile
compile.new/projects/UpcTranslation/: Makefile
compile.new/projects/arrayOptimization/: Makefile
compile.new/projects/autoParallelization/: Makefile
compile.new/projects/autoTuning/: Makefile
compile.new/projects/backstroke/: Makefile
compile.new/projects/binCompass/: Makefile
compile.new/projects/binaryVisualization/: Makefile
compile.new/projects/bugSeeding/: Makefile
compile.new/projects/checkPointExample/: Makefile
compile.new/projects/compass/: Makefile
compile.new/projects/compass2/: Makefile
compile.new/projects/dataStructureGraphing/: Makefile
compile.new/projects/extractMPISkeleton/: Makefile
compile.new/projects/graphColoring/: Makefile
compile.new/scripts/: Makefile
compile.new/src/: Makefile
compile.new/tests/: Makefile
compile.new/tools/: Makefile
compile.new/tutorial/: Makefile
compile/exampleTranslators/: Makefile
compile/src/: Makefile  dummyCppFileForLibrose.lo  testSharedRoseLib
compile/tests/: testAnalysis  testAstFileRead  testCodeGeneration  testFrontEnd  testParser  testTranslatorFoldedConstants
compile/tools/: Makefile
compile/tutorial/: Makefile
compile2/: Makefile  detail.html  index.html  libtool  rose_config.h  summary.html
compile2/binaries/: Makefile
compile2/config/: Makefile
compile2/demo/: Makefile
compile2/docs/: Makefile
compile2/projects/: Makefile
compile2/scripts/: Makefile
compile2/src/: librose.la
compile2/tests/: Makefile  parallelASTMerge  testAstFileIO  testGraphGeneration  testTokenGeneration  testTranslator  testTranslatorUnfoldedConstants
compile2/tutorial/: exampleMakefile
config/: support-rose.m4
projects/RTED/: Makefile.am
projects/predicateAnalysis/: Makefile.in
projects/ssaAnalysis/: Makefile.am
projects/ssaAnalysis/src/: HeapSSALattice.C  LatticeArith.C  Makefile.am  constantAnalysis.C  constantAnalysisTransfer.C  heapDefsAndUsesTraversal.C  heapReachingDef.C  heapSSA.C  sccCompileTimeAssertion.C  sccTestHarness.C  valueNumbering.C
projects/ssaAnalysis/tests/: Makefile.am  testConstantChecker0.C  testConstantChecker1.C  testConstantChecker2.C  testConstantChecker3.C  testConstantChecker4.C
(+10331 files in other folders)
